--- a/.env-template
+++ b/.env-template
@@ -8,7 +8,7 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database settings (if using something other than SQLite)
-DATABASE_URL=postgres://user:password@localhost/dbname
+# DATABASE_URL=postgres://user:password@localhost/dbname
 
 # Email configuration (for password reset, etc.)
 # EMAIL_HOST=smtp.gmail.com
