--- a/.env-template
+++ b/.env-template
@@ -25,8 +25,8 @@ TIME_ZONE=UTC
 LANGUAGE_CODE=en-us
 
 # Static files settings
-STATIC_URL=/static/
-STATIC_ROOT=/path/to/static/root
+# STATIC_URL=/static/
+# STATIC_ROOT=/path/to/static/root
 
 # Media files settings
 # MEDIA_URL=/media/
